[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
methods = { path = "../methods" }
risc0-zkvm = { version = "1.0.1", features = ["prove"] }
tfhe = { version = "0.6.1", features = ["boolean", "aarch64-unix"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0"
